--- a/theme/style-guide.html
+++ b/theme/style-guide.html
@@ -1821,4 +1821,4 @@ $('[data-share-whatsapp').attr('target', '_blank');
 });
 </script>
 
-<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.1/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
+</body></html>
