--- a/theme/[project].html
+++ b/theme/[project].html
@@ -23,42 +23,25 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{ settings.site.favicon | default: "/assets/images/favicon.png" }}" rel="shortcut icon" type="image/x-icon">
   <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.png" }}" rel="apple-touch-icon">
-  <link href="https://www.just-edo.com/detail_project" rel="canonical"><!--  [Attributes by Finsweet] CMS Slider  -->
+  <link href="https://www.just-edo.com{{page.url}}" rel="canonical"><!--  Google Tag Manager  -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TQCHP2D');</script>
+  <!--  End Google Tag Manager  -->
+  <!--  [Attributes by Finsweet] CMS Slider  -->
   <script async="" src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-cmsslider@1/cmsslider.js"></script>
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
         }</style></head>
 <body class="body" style="background-color: {{f_bg-colour}};">
   <div class="page-wrapper navbar-on-page">
-    <div class="global-styles w-embed">
+    <div class="global-styles w-embed w-iframe">
+      <!--  Google Tag Manager (noscript)  -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQCHP2D" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!--  End Google Tag Manager (noscript)  -->
       <style>
-/* Get rid of top margin on first element in any rich text element */
-.w-richtext > :not(div):first-child, .w-richtext > div:first-child > :first-child {
-  margin-top: 0 !important;
-}
-/* Get rid of bottom margin on last element in any rich text element */
-.w-richtext>:last-child, .w-richtext ol li:last-child, .w-richtext ul li:last-child {
-	margin-bottom: 0 !important;
-}
-/* 
-Make the following elements inherit typography styles from the parent and not have hardcoded values. 
-Important: You will not be able to style for example "All Links" in Designer with this CSS applied.
-Uncomment this CSS to use it in the project. Leave this message for future hand-off.
-*/
-/*
-a,
-.w-input,
-.w-select,
-.w-tab-link,
-.w-nav-link,
-.w-dropdown-btn,
-.w-dropdown-toggle,
-.w-dropdown-link {
-  color: inherit;
-  text-decoration: inherit;
-  font-size: inherit;
-}
-*/
 /* Prevent all click and hover interaction with an element */
 .pointer-events-off {
 	pointer-events: none;
@@ -335,7 +318,7 @@ margin: 0rem !important;
                   {%- assign setItems = f_gallery -%}<div class="collection-list-wrapper-7 w-dyn-list">
                     {%- unless setItems.length == 0 -%}<div role="list" class="collection-list-8 scroll-in w-dyn-items">
                       {%- for setItem in setItems -%}<div role="listitem" class="w-dyn-item">
-                        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox"><img loading="lazy" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;90vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;100vw&quot;}]" src="{{ setItem.url }}" alt="{{ setItem.alt }}" class="image-6">
+                        <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox"><img loading="lazy" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;100vw&quot;}]" src="{{ setItem.url }}" alt="{{ setItem.alt }}" class="image-6">
                           <script type="application/json" class="w-json">{"items":[{"type":"image","url":"{{ setItem.url }}","caption":""}],"group":"Project images"}</script>
                         </a>
                       </div>{%- endfor -%}
@@ -346,7 +329,7 @@ margin: 0rem !important;
                   <template><div class="collection-list-wrapper-7 w-dyn-list">
                     <div role="list" class="collection-list-8 scroll-in w-dyn-items">
                       <div role="listitem" class="w-dyn-item">
-                        <a href="{# links.23 #}" class="lightbox-link w-inline-block w-lightbox"><img loading="lazy" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;84vw&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;90vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;100vw&quot;}]" src="{# setItem.url #}" alt="{# setItem.alt #}" class="image-6">
+                        <a href="{# links.23 #}" class="lightbox-link w-inline-block w-lightbox"><img loading="lazy" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;100vw&quot;}]" src="{# setItem.url #}" alt="{# setItem.alt #}" class="image-6">
                           <script type="application/json" class="w-json">{"items":[{"type":"image","url":"{# setItem.url #}","caption":""}],"group":"Project images"}</script>
                         </a>
                       </div>
@@ -432,7 +415,7 @@ margin: 0rem !important;
                       <a href="{{ item.url }}" class="proj-link w-inline-block">
                         <div class="margin-bottom margin-xsmall">
                           <div class="blog2_image-wrapper">
-                            <div class="image-overlay-proj"></div><img loading="lazy" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;100vw&quot;}]" src="{{ item.data.f_hero-image.url }}" alt="{{ item.data.f_hero-image.alt }}" class="blog2_image">
+                            <div class="image-overlay-proj"></div><img loading="lazy" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;79vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;28vw&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;24vw&quot;},{&quot;max&quot;:1279,&quot;size&quot;:&quot;208px&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;16vw&quot;}]" src="{{ item.data.f_hero-image.url }}" alt="{{ item.data.f_hero-image.alt }}" class="blog2_image">
                           </div>
                         </div>
                         <div class="margin-bottom margin-tiny">
