--- a/theme/projects.html
+++ b/theme/projects.html
@@ -2,12 +2,12 @@
 <html data-wf-page="6431808d8e9cf5d8da5897ff" data-wf-site="63beba5fc42a964f83b156fc" lang="EN"><head><link rel="preconnect" crossorigin="true" href="https://assets.website-files.com">
   <meta charset="utf-8">
   <title>Projects</title>
-  <meta content="Your guide in navigating change by design. We help business owners to unlock their brand’s potential, guiding entrepreneurs in their (re)branding journeys. We create brand identities and subsequently design all touch points with your audiences." name="description">
+  <meta content="We help business owners navigate change by design and unlock their brand’s potential. We create brand identities and design all touch points with your audiences." name="description">
   <meta content="Projects" property="og:title">
-  <meta content="Your guide in navigating change by design. We help business owners to unlock their brand’s potential, guiding entrepreneurs in their (re)branding journeys. We create brand identities and subsequently design all touch points with your audiences." property="og:description">
+  <meta content="We help business owners navigate change by design and unlock their brand’s potential. We create brand identities and design all touch points with your audiences." property="og:description">
   <meta content="https://uploads-ssl.webflow.com/63beba5fc42a964f83b156fc/64773aba0058bd038cbb5e55_Cases.jpg" property="og:image">
   <meta content="Projects" property="twitter:title">
-  <meta content="Your guide in navigating change by design. We help business owners to unlock their brand’s potential, guiding entrepreneurs in their (re)branding journeys. We create brand identities and subsequently design all touch points with your audiences." property="twitter:description">
+  <meta content="We help business owners navigate change by design and unlock their brand’s potential. We create brand identities and design all touch points with your audiences." property="twitter:description">
   <meta content="https://uploads-ssl.webflow.com/63beba5fc42a964f83b156fc/64773aba0058bd038cbb5e55_Cases.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -23,7 +23,13 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{ settings.site.favicon | default: "/assets/images/favicon.png" }}" rel="shortcut icon" type="image/x-icon">
   <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.png" }}" rel="apple-touch-icon">
-  <link href="https://www.just-edo.com/projects" rel="canonical">
+  <link href="https://www.just-edo.com/projects" rel="canonical"><!--  Google Tag Manager  -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TQCHP2D');</script>
+  <!--  End Google Tag Manager  -->
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
         }</style></head>
@@ -43,35 +49,11 @@
 </style>
   </div>
   <div class="page-wrapper navbar-on-page">
-    <div class="global-styles w-embed">
+    <div class="global-styles w-embed w-iframe">
+      <!--  Google Tag Manager (noscript)  -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQCHP2D" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!--  End Google Tag Manager (noscript)  -->
       <style>
-/* Get rid of top margin on first element in any rich text element */
-.w-richtext > :not(div):first-child, .w-richtext > div:first-child > :first-child {
-  margin-top: 0 !important;
-}
-/* Get rid of bottom margin on last element in any rich text element */
-.w-richtext>:last-child, .w-richtext ol li:last-child, .w-richtext ul li:last-child {
-	margin-bottom: 0 !important;
-}
-/* 
-Make the following elements inherit typography styles from the parent and not have hardcoded values. 
-Important: You will not be able to style for example "All Links" in Designer with this CSS applied.
-Uncomment this CSS to use it in the project. Leave this message for future hand-off.
-*/
-/*
-a,
-.w-input,
-.w-select,
-.w-tab-link,
-.w-nav-link,
-.w-dropdown-btn,
-.w-dropdown-toggle,
-.w-dropdown-link {
-  color: inherit;
-  text-decoration: inherit;
-  font-size: inherit;
-}
-*/
 /* Prevent all click and hover interaction with an element */
 .pointer-events-off {
 	pointer-events: none;
