--- a/theme/index.html
+++ b/theme/index.html
@@ -494,4 +494,4 @@ $('[data-share-whatsapp').attr('target', '_blank');
 });
 </script>
 
-<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script></body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script>window.netlifyIdentity&&window.netlifyIdentity.on("init",a=>{a||window.netlifyIdentity.on("login",()=>{document.location.href="/admin/"})});</script></body></html>
