--- a/theme/insights.html
+++ b/theme/insights.html
@@ -25,7 +25,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{ settings.site.favicon | default: "/assets/images/favicon.png" }}" rel="shortcut icon" type="image/x-icon">
   <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.png" }}" rel="apple-touch-icon">
-  <link href="https://www.just-edo.com/insights" rel="canonical"><!--  Google Tag Manager  -->
+  <link href="https://www.just-edo.com/insights/" rel="canonical"><!--  Google Tag Manager  -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -251,17 +251,17 @@ margin: 0rem !important;
                 </div>
                 <div id="w-node-_3ecd7666-aaa4-9960-6fe6-8c0e77ffd006-ef5897fa" data-w-id="3ecd7666-aaa4-9960-6fe6-8c0e77ffd006" data-is-ix2-target="1" class="lottie-animation" data-animation-type="lottie" data-src="/assets/documents/3dcube-edo2.json" data-loop="1" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="2.875" data-duration="1.5"></div>
                 <div id="w-node-_6cd24848-130c-c5d7-9176-5304e16daa2e-ef5897fa" class="layout350_tabs-menu">
-                  <a href="{{ links.-3359f126 }}" class="layout350_tab-link w-inline-block">
-                    <div class="tab-text">{{ texts.3e43f43 }}</div>
+                  <a href="{{ links.-3359f126 }}" class="layout350_tab-link square w-inline-block">
+                    <div class="tab-text">{{ texts.3e43f43 }}</div><img src="{{ images.147ba0ae.url }}" loading="lazy" sizes="(max-width: 479px) 100vw, 16vw" alt="{{ images.147ba0ae.alt | trim | escape }}" class="bgimage">
                   </a>
-                  <a href="{{ links.-3359f125 }}" class="layout350_tab-link w-inline-block">
-                    <div class="tab-text">{{ texts.28035a }}</div>
+                  <a href="{{ links.-3359f125 }}" class="layout350_tab-link square w-inline-block">
+                    <div class="tab-text">{{ texts.28035a }}</div><img src="{{ images.48167655.url }}" loading="lazy" sizes="(max-width: 479px) 100vw, 16vw" alt="{{ images.48167655.alt | trim | escape }}" class="bgimage">
                   </a>
-                  <a href="{{ links.-3359f124 }}" class="layout350_tab-link w-inline-block">
-                    <div class="tab-text">{{ texts.2572f1b }}</div>
+                  <a href="{{ links.-3359f124 }}" class="layout350_tab-link square w-inline-block">
+                    <div class="tab-text">{{ texts.2572f1b }}</div><img src="{{ images.6f7c211a.url }}" loading="lazy" sizes="(max-width: 479px) 100vw, 16vw" alt="{{ images.6f7c211a.alt | trim | escape }}" class="bgimage">
                   </a>
-                  <a href="{{ links.-3359f123 }}" class="layout350_tab-link w-inline-block">
-                    <div class="tab-text">{{ texts.-65875822 }}</div>
+                  <a href="{{ links.-3359f123 }}" class="layout350_tab-link square w-inline-block">
+                    <div class="tab-text text-color-white">{{ texts.-65875822 }}</div><img src="{{ images.-4fb35d1d.url }}" loading="lazy" sizes="(max-width: 479px) 100vw, 16vw" alt="{{ images.-4fb35d1d.alt | trim | escape }}" class="bgimage">
                   </a>
                 </div>
               </div>
