--- a/theme/services.html
+++ b/theme/services.html
@@ -25,7 +25,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="{{ settings.site.favicon | default: "/assets/images/favicon.png" }}" rel="shortcut icon" type="image/x-icon">
   <link href="{{ settings.site.apple_touch_icon | default: "/assets/images/webclip.png" }}" rel="apple-touch-icon">
-  <link href="https://www.just-edo.com/services" rel="canonical"><!--  Google Tag Manager  -->
+  <link href="https://www.just-edo.com/services/" rel="canonical"><!--  Google Tag Manager  -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -253,20 +253,40 @@ margin: 0rem !important;
                   <p class="text-size-medium serif">{{ texts.-62d69ba5 }}</p>
                 </div>
                 <div id="w-node-_799cf256-f736-a683-0d6e-617bb3257f76-b7589800" class="layout_tabs-menu">
-                  <a href="{{ links.19abd220 }}" id="w-node-_799cf256-f736-a683-0d6e-617bb3257f77-b7589800" class="layout350_tab-link w-inline-block">
-                    <div class="tab-text">{{ texts.-3702327d }}</div>
+                  <a href="{{ links.19abd220 }}" id="w-node-_799cf256-f736-a683-0d6e-617bb3257f77-b7589800" class="layout350_tab-link bgc-1 w-inline-block">
+                    <div>
+                      <div class="tab-text text-weight-xbold text-color-white">{{ texts.31 }}</div>
+                      <div class="tab-text">{{ texts.-3702327d }}</div>
+                    </div>
+                    <div class="image-wrapper-small"><img src="{{ images.-3efea075.url }}" sizes="(max-width: 479px) 100vw, (max-width: 991px) 8vw, 7vw" alt="{{ images.-3efea075.alt | trim | escape }}"></div>
                   </a>
-                  <a href="{{ links.4f743727 }}" class="layout350_tab-link w-inline-block">
-                    <div class="tab-text">{{ texts.7199d7f2 }}</div>
+                  <a href="{{ links.4f743727 }}" class="layout350_tab-link bgc-2 w-inline-block">
+                    <div>
+                      <div class="tab-text text-weight-xbold text-color-white">{{ texts.32 }}</div>
+                      <div class="tab-text">{{ texts.7199d7f2 }}</div>
+                    </div>
+                    <div class="image-wrapper-small"><img src="{{ images.4fb5654e.url }}" sizes="(max-width: 479px) 100vw, (max-width: 991px) 8vw, 7vw" alt="{{ images.4fb5654e.alt | trim | escape }}"></div>
                   </a>
-                  <a href="{{ links.-752e4b62 }}" class="layout350_tab-link w-inline-block">
-                    <div class="tab-text">{{ texts.51a4b0b4 }}</div>
+                  <a href="{{ links.-752e4b62 }}" class="layout350_tab-link bgc-3 w-inline-block">
+                    <div>
+                      <div class="tab-text text-weight-xbold text-color-white">{{ texts.33 }}</div>
+                      <div class="tab-text">{{ texts.51a4b0b4 }}</div>
+                    </div>
+                    <div class="image-wrapper-small"><img src="{{ images.-2ee3c64c.url }}" sizes="(max-width: 479px) 100vw, (max-width: 991px) 8vw, 7vw" alt="{{ images.-2ee3c64c.alt | trim | escape }}"></div>
                   </a>
-                  <a href="{{ links.78aa5c1d }}" class="layout350_tab-link w-inline-block">
-                    <div class="tab-text">{{ texts.1f1965b3 }}</div>
+                  <a href="{{ links.78aa5c1d }}" class="layout350_tab-link bgc-4 w-inline-block">
+                    <div>
+                      <div class="tab-text text-weight-xbold text-color-white">{{ texts.34 }}</div>
+                      <div class="tab-text">{{ texts.1f1965b3 }}</div>
+                    </div>
+                    <div class="image-wrapper-small"><img src="{{ images.6b38466b.url }}" sizes="(max-width: 479px) 100vw, (max-width: 991px) 8vw, 7vw" alt="{{ images.6b38466b.alt | trim | escape }}"></div>
                   </a>
-                  <a href="{{ links.-709e01ed }}" id="website-des-dev" class="layout350_tab-link w-node-e13e6336-c1ba-d1bc-6d5d-6c8c244510ea-b7589800 w-inline-block">
-                    <div class="tab-text">{{ texts.187f33e4 }}</div>
+                  <a href="{{ links.-709e01ed }}" id="website-des-dev" class="layout350_tab-link bgc-5 w-node-e13e6336-c1ba-d1bc-6d5d-6c8c244510ea-b7589800 w-inline-block">
+                    <div>
+                      <div class="tab-text text-weight-xbold text-color-white">{{ texts.35 }}</div>
+                      <div class="tab-text">{{ texts.187f33e4 }}</div>
+                    </div>
+                    <div class="image-wrapper-small"><img src="{{ images.226ef34c.url }}" sizes="(max-width: 479px) 100vw, (max-width: 991px) 8vw, 7vw" alt="{{ images.226ef34c.alt | trim | escape }}"></div>
                   </a>
                 </div>
               </div>
