Updated About page

--- a/theme/[project].html
+++ b/theme/[project].html
@@ -505,4 +505,4 @@ $('[data-share-whatsapp').attr('target', '_blank');
 });
 </script>
 
-</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script></body></html>
