--- a/theme/insights.html
+++ b/theme/insights.html
@@ -35,7 +35,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
         }</style></head>
-<body class="body">
+<body class="body is-video">
   <div class="page-wrapper navbar-on-page">
     <div class="global-styles w-embed w-iframe">
       <!--  Google Tag Manager (noscript)  -->
@@ -248,21 +248,29 @@ margin: 0rem !important;
                     <h1 class="text-color-blue">{{ texts.24589bfb }}</h1>
                   </div>
                   <p class="text-size-medium serif">{{ texts.-2d4e9d }}</p>
+                  <div id="w-node-_6cd24848-130c-c5d7-9176-5304e16daa2e-ef5897fa" class="layout350_tabs-menu">
+                    <a href="{{ links.-3359f126 }}" class="layout350_tab-link square w-inline-block">
+                      <div class="tab-text-2">{{ texts.3e43f43 }}</div><img src="{{ images.147ba0ae.url }}" loading="lazy" sizes="(max-width: 479px) 18vw, (max-width: 1279px) 11vw, 10vw" alt="{{ images.147ba0ae.alt | trim | escape }}" class="bgimage">
+                    </a>
+                    <a href="{{ links.-3359f125 }}" class="layout350_tab-link square w-inline-block">
+                      <div class="tab-text-2">{{ texts.28035a }}</div><img src="{{ images.48167655.url }}" loading="lazy" sizes="(max-width: 479px) 18vw, (max-width: 1279px) 11vw, 10vw" alt="{{ images.48167655.alt | trim | escape }}" class="bgimage">
+                    </a>
+                    <a href="{{ links.-3359f124 }}" class="layout350_tab-link square w-inline-block">
+                      <div class="tab-text-2">{{ texts.2572f1b }}</div><img src="{{ images.6f7c211a.url }}" loading="lazy" sizes="(max-width: 479px) 18vw, (max-width: 1279px) 11vw, 10vw" alt="{{ images.6f7c211a.alt | trim | escape }}" class="bgimage">
+                    </a>
+                    <a href="{{ links.-3359f123 }}" class="layout350_tab-link square w-inline-block">
+                      <div class="tab-text-2 text-color-white">{{ texts.-65875822 }}</div><img src="{{ images.-4fb35d1d.url }}" loading="lazy" sizes="(max-width: 479px) 18vw, (max-width: 1279px) 11vw, 10vw" alt="{{ images.-4fb35d1d.alt | trim | escape }}" class="bgimage">
+                    </a>
+                  </div>
                 </div>
-                <div id="w-node-_3ecd7666-aaa4-9960-6fe6-8c0e77ffd006-ef5897fa" data-w-id="3ecd7666-aaa4-9960-6fe6-8c0e77ffd006" data-is-ix2-target="1" class="lottie-animation" data-animation-type="lottie" data-src="/assets/documents/3dcube-edo2.json" data-loop="1" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="2.875" data-duration="1.5"></div>
-                <div id="w-node-_6cd24848-130c-c5d7-9176-5304e16daa2e-ef5897fa" class="layout350_tabs-menu">
-                  <a href="{{ links.-3359f126 }}" class="layout350_tab-link square w-inline-block">
-                    <div class="tab-text">{{ texts.3e43f43 }}</div><img src="{{ images.147ba0ae.url }}" loading="lazy" sizes="(max-width: 479px) 100vw, 16vw" alt="{{ images.147ba0ae.alt | trim | escape }}" class="bgimage">
-                  </a>
-                  <a href="{{ links.-3359f125 }}" class="layout350_tab-link square w-inline-block">
-                    <div class="tab-text">{{ texts.28035a }}</div><img src="{{ images.48167655.url }}" loading="lazy" sizes="(max-width: 479px) 100vw, 16vw" alt="{{ images.48167655.alt | trim | escape }}" class="bgimage">
-                  </a>
-                  <a href="{{ links.-3359f124 }}" class="layout350_tab-link square w-inline-block">
-                    <div class="tab-text">{{ texts.2572f1b }}</div><img src="{{ images.6f7c211a.url }}" loading="lazy" sizes="(max-width: 479px) 100vw, 16vw" alt="{{ images.6f7c211a.alt | trim | escape }}" class="bgimage">
-                  </a>
-                  <a href="{{ links.-3359f123 }}" class="layout350_tab-link square w-inline-block">
-                    <div class="tab-text text-color-white">{{ texts.-65875822 }}</div><img src="{{ images.-4fb35d1d.url }}" loading="lazy" sizes="(max-width: 479px) 100vw, 16vw" alt="{{ images.-4fb35d1d.alt | trim | escape }}" class="bgimage">
-                  </a>
+                <div id="w-node-_7fc5bfa9-3721-48f6-6457-3d839c7e809c-ef5897fa" class="video-container3">
+                  <div class="html-embed w-embed">
+                    <div style="width: 100%; height: 100%;" class="w-background-video w-background-video-atom">
+                      <video playsinline="" loop="" muted="" autoplay="" data-wf-ignore="true" data-object-fit="cover">
+                        <source src="https://uploads-ssl.webflow.com/63beba5fc42a964f83b156fc/64b280a94059869bce9bfa8f_3D Cube-Edo-transcode.mp4" data-wf-ignore="true">
+                      </video>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -499,4 +507,4 @@ $('[data-share-whatsapp').attr('target', '_blank');
 });
 </script>
 
-</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script></body></html>
