--- a/theme/projects.html
+++ b/theme/projects.html
@@ -414,4 +414,4 @@ $(".view-button").on("click", function () {
 });
 </script>
 
-</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script></body></html>
