--- a/theme/about.html
+++ b/theme/about.html
@@ -560,4 +560,4 @@ $(document).keydown(function(event) {
 });
 </script>
 
-</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script></body></html>
