--- a/theme/articles.html
+++ b/theme/articles.html
@@ -345,4 +345,4 @@ $('[data-share-whatsapp').attr('target', '_blank');
 });
 </script>
 
-</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script></body></html>
