--- a/theme/success.html
+++ b/theme/success.html
@@ -319,4 +319,4 @@ $('[data-share-whatsapp').attr('target', '_blank');
 });
 </script>
 
-</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script></body></html>
